--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
     "version":2,
-    "builds":[{"src":"app.js","use":"@vercel/node"}],
+    "builds":[{"src":"app.js","use":"@vercel/node","config": { "includeFiles": ["dist/**"]}],
     "routes":[{"src":"/{.*}","dest":"app.js"}]
 }
