--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,18 @@
 {
-    "version":2,
-    "builds":[{"src":"app.js","use":"@vercel/node","config": { "includeFiles": ["dist/**"]}],
-    "routes":[{"src":"/{.*}","dest":"app.js"}]
-}
+    "version": 2,
+    "builds": [
+      {
+        "src": "app.js",
+        "use": "@vercel/node",
+        "config": {
+          "includeFiles": ["dist/**"]
+        }
+      }
+    ],
+    "routes": [
+      {
+        "src": "/{.*}",
+        "dest": "app.js"
+      }
+    ]
+  }
