--- a/vercel.json
+++ b/vercel.json
@@ -12,5 +12,8 @@
         "src": "/{.*}",
         "dest": "app.js"
       }
-    ]
+    ],
+    
+      "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+    
   }
