--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,15 @@
     "version": 2,
     "builds": [
       {
-        "src": "app.js",
-        "use": "@now/node"
+        "src": "./app.js",
+        "use": "@vercel/node"
         
       }
     ],
     "routes": [
       {
         "src": "/{.*}",
-        "dest": "app.js"
+        "dest": "/"
       }
     ]
     
